target create file

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,10 @@
                 padding: 10px 10px;
             }
 
+            input {
+                height: 100%;
+            }
+
             .title {
                 font-size: 1.2rem;
                 font-weight: bold;
@@ -43,6 +47,14 @@
             .sub-text {
                 color: lightgray;
                 font-size: 0.7rem;
+            }
+            .menu-container {
+                display: flex;
+                flex-direction: column;
+
+                width: 100%;
+
+                padding: 10px 15px;
             }
         </style>
     </head>
