--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,21 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-        <meta
-            http-equiv="Cache-Control"
-            content="no-cache, no-store, must-revalidate"
-        />
-        <meta http-equiv="Expires" content="0" />
+       
+        <!-- 1990년 이후 이 페이지의 캐시를 만료시킴. -->
+        <meta http-equiv="Expires" content="Mon, 06 Jan 1990 00:00:01 GMT" />
+
+        <!-- 캐시를 바로 만료시킴. -->
+        <meta http-equiv="Expires" content="-1" />
+
+        <!-- 페이지 로드시마다 페이지를 캐싱하지 않음. (HTTP 1.0) -->
         <meta http-equiv="Pragma" content="no-cache" />
+
+        <!-- 페이지 로드시마다 페이지를 캐싱하지 않음. (HTTP 1.1) -->
+        <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+
+
+
         <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
         <link
             rel="stylesheet"
